examples/test/testpolicy17409.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17409
  namespace: namespace367
spec:
  podSelector:
    matchLabels:
      key8: value38
      key34: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value14
          key30: value43
          key47: value0
      podSelector:
        matchLabels:
          key31: value38
